# homework-hmtl-1

./: Login.html  Login_style.css  README.md  README.rst  Register.html  Register_style.css  application.py  audifonos.html  barra_alexander.html  cart.html  database.json  forum.html  hola.html  info.hmtl  iphone.html  laptop.html  pantalla_principal.html  products_style.css  pyproject.toml  table.html
forum/: agregar.html  app.py  inicio.html  style.css
homework_html_1/: application.py  database.json
homework_html_1/static/: Login_style.css  Register_style.css  aeas.css  cart_style.css  info_style.css  my_bar_style.css  products_style.css  style.css
homework_html_1/templates/: Login.html  Register.html  algoritmo_simetrico_por_series.py  audifonos.html  bienvenido.html  camara.html  cart.html  forum.html  info.html  iphone.html  laptop.html  layout.html  microfono.html  mysql_preview.html  pantalla_principal.html  productos_link.html  users.html
static/: Login_style.css  Register_style.css  aeas.css  cart_style.css  info_style.css  my_bar_style.css  style.css
templates/: Login.html  Register.html  agregar.html  algoritmo_simetrico_por_series.py  audifonos.html  bienvenido.html  camara.html  cart.html  forum.html  index.html  info.html  inicio.html  iphone.html  laptop.html  layout.html  microfono.html  pantalla_principal.html  users.html
test/: games - copia.html
tests/: test_homework_html_1.py
