[tool.poetry]
name = "homework-html-1"
version = "0.1.0"
description = ""
authors = ["PorGabo <gabrielrodriguezpostigo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
